src/EveryPageComponents/ProfilePicSignOut.css
.profile {
    display: flex;
    gap: 10px;
    align-items: center;
}

.profile-pic {
    width: 30px;
    height: 30px;
    border-radius: 100px;
}

.logout-btn { 
    background-color: transparent;
    border: none;
    font-size: 15px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: bold;
    color: #1D2939;
    transition: 0.4s;
}

.logout-btn:hover {
    background: linear-gradient(97deg, #C41740 4.8%, #EA9C28 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    cursor: pointer;
}

